fixed header and create container skeleton

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -18,4 +18,5 @@ html {
     --black-color: #000;
     --text-color-light: rgb(206, 200, 200);
     --primary-color: #2daaed;
+    --height-header: 58px;
 }
