--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,7 +1,10 @@
-
-
+.header-wrap {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+}
 .header {
-    width: 100%;
     height: 58px;
     background-color: var(--while-color);
     display: flex;
@@ -9,7 +12,9 @@
     padding: 10px 0;
     justify-content: space-between;
 }
-.border-header {
+.separate-line {
+    position: fixed;
+    top: calc(var(--height-header));
     width: 100%;
     height: 1px;
     background-color: var(--border-primary);
