--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -1,4 +1,21 @@
 .sidebar {
     background-color: red;
     height: 1000px;
+    font-size: 2rem;
+}
+.artist-weekly {
+}
+.suggest-song {
+}
+.hot-topic {
+
+}
+.song-rankings {
+
+}
+.mv-rankings {
+
+}
+.top-100 {
+
 }
